# SOL-CLI-Tool

./: Cargo.toml  readme.md
src/: commands.rs  main.rs  solana_utils.rs
