[package]
name = "solana-cli-tool"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "2.3.4"
solana-sdk = { version = "2.3.1", features = ["full"] }
tokio = { version = "1.46.1", features = ["full"] }
